# tool-algoflow-hs

./: CLAUDE-SHORTCUTS.md  CLAUDE.md  CLAUDE_CODE_MCP_SETUP.md  CONTRIBUTING.md  DEVELOPMENT_SESSION_SUMMARY.md  FLOW_SIMPLE_TUTORIAL.md  HOWTO_BOOTSTRAP.md  LESSONS.md  LICENSE  PROJECT_STATUS.md  README.md  SPRINT_1_COMPLETE.md  SPRINT_2_PLAN.md  SPRINT_PLAN.md  claude-code.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  workflow_example.md
.github/workflows/: ci.yml  docs.yml
algocratic_metrics/: .gitignore  README.md  app.py  requirements.txt
algocratic_metrics/.taskmaster/: state.json
algocratic_metrics/.taskmaster/docs/: prd.txt
algocratic_metrics/.taskmaster/tasks/: tasks.json
algoflow-clean/: DESIGN.md  HANDOFF_NOTES.md  README.md  algoflow-clean.cabal  cabal.project
algoflow-clean/cookbook/: Analysis.hs  Demo.hs  EXPLANATION.md  Examples.hs  graph-runner.cabal
algoflow-clean/mcp-server/: Main.hs  README-NODE.md  README.md  STANDUP_NOTES.md  WorkflowBridge.hs  algoflow-node.mjs  claude-desktop-config.json  mcp.json  test-node-server.mjs  workflow-state.json
algoflow-clean/src/Flow/: Cache.hs  Core.hs  Error.hs  Example.hs  Execute.hs  Free.hs  Graph.hs  Simple.hs  Typed.hs
algoflow-clean/src/Flow/Cache/: Example.hs  SQLite.hs
algoflow-clean/test/: Spec.hs
algoflow-clean/test/Flow/: CacheSpec.hs  CoreSpec.hs  ErrorSpec.hs  ExecuteSpec.hs  FreeSpec.hs  GraphSpec.hs  SimpleSpec.hs
algoflow-clean/test/Flow/Cache/: SQLiteSpec.hs
algoflow-clean/v2/: EXPLANATION.md  Graph.hs  Minimal.hs  MinimalDemo.hs  README.md  StandaloneDemo.hs  TrulyMinimal.hs  Verify.hs  graph-runner.cabal
examples/: DataPipeline.hs  QuickStart.hs
requirements/: transparent_metrics_research.md
