cabal-version:      3.0
name:               algoflow-clean
version:            0.1.0.0
synopsis:           A clean, type-safe workflow engine
description:        A functional workflow engine that actually uses Haskell idioms
                    instead of enterprise Java patterns translated to Haskell syntax.
license:            BSD-3-Clause
license-file:       LICENSE
author:             Your Name
maintainer:         your-email@example.com
category:           Control, Workflow
build-type:         Simple
extra-doc-files:    README.md

common warnings
    ghc-options: -Wall
                 -Wcompat
                 -Widentities
                 -Wincomplete-record-updates
                 -Wincomplete-uni-patterns
                 -Wmissing-export-lists
                 -Wmissing-home-modules
                 -Wpartial-fields
                 -Wredundant-constraints

library
    import:           warnings
    exposed-modules:  Flow.Core
                    , Flow.Free
                    , Flow.Graph
                    , Flow.Execute
                    , Flow.Example
                    , Flow.Typed
                    , Flow.Cache
    build-depends:    base ^>=4.17.0.0
                    , text
                    , containers
                    , async
                    , stm
                    , time
                    , free
                    , profunctors
                    , algebraic-graphs
                    , mtl
                    , transformers
                    , exceptions
                    , aeson
                    , wai
                    , warp
                    , http-types
                    , bytestring
                    , hashable
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions: 
        OverloadedStrings
        DeriveFunctor
        DeriveGeneric
        ScopedTypeVariables

executable algoflow-mcp-server
    import:           warnings
    main-is:          Main.hs
    other-modules:    WorkflowBridge
    build-depends:    base ^>=4.17.0.0
                    , algoflow-clean
                    , text
                    , aeson
                    , wai
                    , warp
                    , http-types
                    , bytestring
                    , containers
                    , async
                    , stm
    hs-source-dirs:   mcp-server
    default-language: Haskell2010
    default-extensions: 
        OverloadedStrings
        DeriveGeneric
        RecordWildCards
        GADTs

test-suite algoflow-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:    base ^>=4.17.0.0
                    , algoflow-clean
                    , hspec
                    , QuickCheck
